TFP-5554: Slutter å skrive ned til gammel historikkinnslag tabell og genererer bare nye historikkinnslag i ny tabell